<resources>
    <string name="app_name">ОТДЕЛКА В РЫБИНСКЕ</string>
    <string name="home">О НАС</string>
    <string name="shop">SHOP</string>
    <string name="aboutsmeta">Посчитать самостоятельно предварительную стоимость работ можно с помощью приведенного ниже образца сметы померяв
площади помещений и умножив их на расценки приведенные в смете. Реальная смета будет составлятся на основе этого же образца.</string>
    <string name="smetalink">https://docs.google.com/spreadsheets/d/1eSNY8y2z2TTcFWQt3GOfSNzW2xWXYdIE</string>
    <string name="catalog">О РЕМОНТАХ</string>
    <string name="contacts">Больше узнать о нас, познакомиться с нашим сообществом,
        которому уже больше 10 лет и cвязаться с нами можно написав сообщение в группу вк:
        https://vk.com/remrybinsk</string>
    <string name="delivery">РАСЧЕТ РЕМОНТА</string>
    <string name="account">ACCOUNT</string>
    <string name="favorites">ЦЕНЫ</string>
    <string name="settings">ПОРТФОЛИО</string>
    <string name="glavnonas">О НАС</string>
    <string name="about">Мы поможем вам с отделкой
        вашей квартиры. Ваши стены, потолок и пол, перестали вас радовать,
        ваша ванная комната нуждается в ремонте, мы является ответом на ваш вопрос. Мы имеем большой опыт работ в сфере отделки
        и капитального ремонта и  без проблем осуществляем ремонт объектов "под ключ"
        и частично. Мы можем выполнить как отдельные работы, например переборка или
         заливка стяжкой пола или шпаклевание, так и ремонт например ванной или комнаты под ключ,
         так и ремонт квартиры или частного дома под ключ. </string>
    <string name="glaboutremont">О ВИДАХ РЕМОНТОВ</string>
    <string name="aboutremont">Косметический ремонт – это приведение помещения в красивый
        вид, используя при этом минимальные финансовые ресурсы, то есть многие виды
        неровностей , такие как кривизна стен, существенные неровности пола, потолок,
        который образуется стыком плит на разных уровнях могут выдать то, что ремонт
        является всего лишь косметичеким. Современные строительные материалы позволяют
        получать гораздо более высокое качество отделки, чем это было возможно раньше,
        допустим даже 10 лет назад. Область строительства и отделки не стоит на месте,
        в этой сфере постоянно разрабатываются новые строительные материалы, которые
        качественно и функционально превосходят предыдущие. В настоящее время существует
        большой ассортимент , керамических материалов, обоев, дверей, красок, материалов
        для пола и многое другое. С помощью профессионального дизайнера вы можете
        спланировать все свои даже самые индивидуальные идеи, а мы осуществим их в
        реальности. Теперь поговорим о капитальном ремонте. Капитальный ремонт зачастую
        включает в себя такие работы как демонтаж (перегородок, старой штукатурки и т.д.),
        штукатурка либо облицовка гипсокартоном стен и потолка для предания им идеально
        ровной поверхности. Также переборку пола либо выравнивание стяжкой.
        К капитальному ремонту относится также и ремонтванной комнаты, так как по объему
        работ косметическим его никак не назовешь. И только после этого идет переход к
        этапу финишных отделочных работ. Это более дорогой, но более качественный вид
        ремонта. Стандартная внутренняя отделка квартир, как уже говорилось ранее включает
        такие работы как: подготовка стен и демонтаж, устройство выравнивающей стяжки,
        облицовка плиткой, подготовка и покраска потолков, облицовка стен и потолка
        гипсокартоном, штукатурка, шпатлевка, поклейка обоев, сантехнические работы,
        электромонтажные работы и т.д.. Обращаясь к нам вы можете быть уверены, что
        все эти работы будут выполняться с использованием современных и качественных
        материалов, новых технологий, в строгом соответствии со стандартами и вашими
        пожеланиями. В Рыбинске есть множество объектов, посмотрев которые вы можете
        оценить нашу работу. Наша компания на рынке отделочных и строительных работ
        находится уже больше 11 лет. За это время накоплен большой опыт работы ,
        на сайте вы можете посмотреть только некоторые элементы из некоторых наших работ,
        но все конечно и сфотографировать не удалось. Мы производит отделочные работылюбой
        сложности качественно и в оговоренные сроки. Мы следим за постоянно
        совершенствующимися технологиями производства отделочных работ. </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zagolovokprise">Здесь вы можете посмотреть некоторые расценки на наши работы</string>
    <string name="plitka">Облицовка стен, пола керамической плиткой от 1300 за м.кв.
        включая затирку швов</string>
    <string name="shpaklevka">Шпатлевание стен от 120 руб за слой</string>
    <string name="shtukaturka">Оштукатуривание стен от 500 руб/м2</string>
    <string name="oboi">Оклеивание стен обоями от 200 руб/м2</string>
    <string name="plintusa">Монтаж плинтусов от 100 руб/м2</string>
    <string name="paneli">Облицовка стен, потолка панелями от  400 руб/м2</string>
    <string name="elektrotochka">Электроточки от 500 за штуку</string>
    <string name="stajka">Полный пирог стяжки от 900 руб/м2</string>
    <string name="derevoplita">Облицовка пола ДВП, ОСП и т.д от 250 руб/м2</string>
    <string name="laminat">Укладка ламината на пол от 300 руб/м2</string>
    <string name="lenoleum">Укладка ленолеума от 100 руб/м2</string>
    <string name="pokraska">Покраска ровных поверхностей (пола, стен, потолков) от 90 руб/м2 за слой</string>
    <string name="podrobno">Более подробные расценки на наши работы вы можете посмотреть по этой
        ссылке http://remontrybinsk.ru/price.html</string>
    <string name="portfolio">Примеры некоторых из наших работ</string>
</resources>