<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".favorites">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        >

        <TextView
            android:id="@+id/odin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold|italic"
            android:gravity="center"
            android:text="@string/zagolovokprise"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/dva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintTop_toBottomOf="@+id/odin"
            android:text="@string/plitka"
            android:textSize="20sp"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/tri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintTop_toBottomOf="@+id/dva"
            android:text="@string/shpaklevka"
            android:textSize="20sp"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/chetir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintTop_toBottomOf="@+id/tri"
            android:text="@string/shtukaturka"
            android:textSize="20sp"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/piat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintTop_toBottomOf="@+id/chetir"
            android:text="@string/oboi"
            android:textSize="20sp"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/shest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintTop_toBottomOf="@+id/piat"
            android:text="@string/plintusa"
            android:textSize="20sp"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/sem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintTop_toBottomOf="@+id/shest"
            android:text="@string/paneli"
            android:textSize="20sp"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/vosem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintTop_toBottomOf="@+id/sem"
            android:text="@string/elektrotochka"
            android:textSize="20sp"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/deviat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintTop_toBottomOf="@+id/vosem"
            android:text="@string/stajka"
            android:textSize="20sp"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/desiat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintTop_toBottomOf="@+id/deviat"
            android:text="@string/derevoplita"
            android:textSize="20sp"
            android:textStyle="bold|italic"/>



        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            app:layout_constraintTop_toBottomOf="@+id/desiat"
            android:src="@drawable/otdel4"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>